--- a/.env.example
+++ b/.env.example
@@ -15,7 +15,7 @@ DB_PASSWORD=
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
-QUEUE_CONNECTION=sync
+QUEUE_CONNECTION=database
 SESSION_DRIVER=file
 SESSION_LIFETIME=120
 
@@ -46,6 +46,7 @@ MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
 APP_THEME=ezone
+APP_TIMEZONE="Asia/Jakarta"
 RAJAONGKIR_API_KEY=
 RAJAONGKIR_BASE_URL=http://api.rajaongkir.com/starter/
 RAJAONGKIR_ORIGIN=501
