--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "fideloper/proxy": "^4.2",
         "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^7.0",
+        "intervention/image": "^2.5",
         "laracasts/flash": "^3.2",
         "laravel/framework": "^7.24",
         "laravel/tinker": "^2.0",
